# arol-ottimizzazione

./: cache.ipynb  es.ipynb  fitness.ipynb  multiple-knapsack.ipynb  one-max.ipynb  pyproject.toml  requirements.txt  set-covering.ipynb
day01_works/: dellisola-multiple-knapsack.ipynb  elia-ferraro.py  enrico-capello.py  macario-multiple-knapsack.ipynb  squillero-multiple-knapsack.ipynb  varesi-multiple-knapsack.ipynb
